# viseme-video-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
viseme_video_generator/: video_generator.py  viseme_video_generator.py
